[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/e/dummy.png" type="Texture" id=1]
[ext_resource path="res://scripts/Dummy.gd" type="Script" id=2]
[ext_resource path="res://sprites/e/dummy-a5.png" type="Texture" id=3]
[ext_resource path="res://sprites/e/dummy-a4.png" type="Texture" id=4]
[ext_resource path="res://sprites/e/dummy-a3.png" type="Texture" id=5]
[ext_resource path="res://sprites/e/dummy-a1.png" type="Texture" id=6]
[ext_resource path="res://sprites/e/dummy-a2.png" type="Texture" id=7]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.5
absorbent = true

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 0.5 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "attacked",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2, 4 )

[node name="Dummy" type="RigidBody2D"]
input_pickable = true
collision_layer = 4
collision_mask = 7
mode = 2
mass = 2.5
physics_material_override = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
